# crowd_navigation

./: .gitignore  main.py  pyproject.toml
simulation/: Assembly-CSharp.csproj
simulation/Assets/: UniversalRenderPipelineGlobalSettings.asset
simulation/Assets/Prefabs/: npc.prefab  player.prefab
simulation/Assets/Scenes/: environment.unity  particles.unity
simulation/Assets/Scenes/environment/: EntitiesSubscene.unity
simulation/Assets/Scripts/: Boundary.cs  Controller.cs  NpcParticles.cs  NpcPool.cs  ObjectPool.cs  Player.cs  PlayerControl.cs  Rectangle.cs  Utils.cs  texture2world_and_back.drawio  texture_layout.drawio
simulation/Assets/Scripts/Authoring/: BoundaryAuthoring.cs  BoundarySpawnerAuthoring.cs  EntitiesReferencesAuthoring.cs  NpcMoverAuthoring.cs  NpcSpawnerAuthoring.cs
simulation/Assets/Scripts/Systems/: BoundarySpawnerSystem.cs  NpcDestroyerSystem.cs  NpcMoverSystem.cs  NpcSpawnerSystem.cs
simulation/Assets/Sprites/: boundary.psd
simulation/ProjectSettings/: ProjectSettings.asset
simulation/UserSettings/: EditorUserSettings.asset  Search.settings
simulation/UserSettings/Layouts/: default-6000.dwlt
